MonetDB/src/mal/Tests/tst401.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## testing the simple iterators on builtin types
#
#	i:= -1.0:flt;
#barrier v1:= iterator.nextElement(i,0.0:flt,2.5:flt, 1.3:flt);
#	print(i);
#	v:= "do something";
#	redo v1;
#end	v1;
#
function Admin.main():int;	#0:void (main:int)
	i := -1.0;	#1:flt (i:flt)($2:flt)
barrier	v1 := iterator.nextElement(i,0.0,2.5,1.3);	#2 unknown:void (v1:any)(i:flt)($4:flt)($5:flt)($6:flt)
	system.print(i);	#3:int ($7:int)(i:flt)
	v := "do something";	#4:str (v:str)($9:str)
	redo v1 ;	#5:void (v1:any)
end	v1;	#6:void (v1:any)
end function;	#7:void 
!ERROR: MALexception:Admin.main[2]:Instruction type not fixed
>